Fixed issue wtih library images being different widths on IE.

--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,8 @@ body {
 .comicCover {
 	border: 1px solid black;
 	margin: 10px;
+	height: auto;
+	width: 100px;
 }
 
 .selectedThumbNail {
